--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>Test Devops</title>
  </head>
 <body>
-  <h1>Good After Noon Hitesh and Santosh </h1>
+  <h1>Good After Noon Hitesh and Santosh and Manish </h1>
  </body>
 </html>
